@@ -145,36 +145,76 @@ int pm_strcpy(POOLMEM **pm, char *str)
  */
 void jobstatus_to_ascii(int JobStatus, char *msg, int maxlen)
 {
-   char *termstat;
+   char *jobstat;
    char buf[100];
 
    switch (JobStatus) {
-      case JS_Terminated:
-         termstat = _("OK");
-	 break;
-     case JS_FatalError:
-     case JS_ErrorTerminated:
-         termstat = _("Error");
-	 break;
-     case JS_Error:
-         termstat = _("Non-fatal error");
-	 break;
-     case JS_Canceled:
-         termstat = _("Canceled");
-	 break;
-     case JS_Differences:
-         termstat = _("Verify differences");
-	 break;
-     default:
-	 if (JobStatus == 0) {
-	    buf[0] = 0;
-	 } else {
-            bsnprintf(buf, sizeof(buf), _("Unknown Job termination status=%d"), JobStatus);
-	 }
-	 termstat = buf;
-	 break;
+   case JS_Created:
+      jobstat = _("Created");
+      break;
+   case JS_Running:
+      jobstat = _("Running");
+      break;
+   case JS_Blocked:
+      jobstat = _("Blocked");
+      break;
+   case JS_Terminated:
+      jobstat = _("OK");
+      break;
+   case JS_FatalError:
+   case JS_ErrorTerminated:
+      jobstat = _("Error");
+      break;
+   case JS_Error:
+      jobstat = _("Non-fatal error");
+      break;
+   case JS_Canceled:
+      jobstat = _("Canceled");
+      break;
+   case JS_Differences:
+      jobstat = _("Verify differences");
+      break;
+   case JS_WaitFD:
+      jobstat = _("Waiting on FD");
+      break;
+   case JS_WaitSD:
+      jobstat = _("Wait on SD");
+      break;
+   case JS_WaitMedia:
+      jobstat = _("Wait for new Volume");
+      break;
+   case JS_WaitMount:
+      jobstat = _("Waiting for mount");
+      break;
+   case JS_WaitStoreRes:
+      jobstat = _("Waiting for Storage resource");
+      break;
+   case JS_WaitJobRes:
+      jobstat = _("Waiting for Job resource");
+      break;
+   case JS_WaitClientRes:
+      jobstat = _("Waiting for Client resource");
+      break;
+   case JS_WaitMaxJobs:
+      jobstat = _("Waiting on Max Jobs");
+      break;
+   case JS_WaitStartTime:
+      jobstat = _("Waiting for Start Time");
+      break;
+   case JS_WaitPriority:
+      jobstat = _("Waiting on Priority");
+      break;
+
+   default:
+      if (JobStatus == 0) {
+	 buf[0] = 0;
+      } else {
+         bsnprintf(buf, sizeof(buf), _("Unknown Job termination status=%d"), JobStatus);
+      }
+      jobstat = buf;
+      break;
    }
-   bstrncpy(msg, termstat, maxlen);
+   bstrncpy(msg, jobstat, maxlen);
 }
 
 /*
